Updating for rootless containers and linux os builds
Added data to gitignore (for local volumes)
Use php:8.1.16-fpm-alpine3.17 as base image now
Update build.xml in docs and root to check for is_linux
Streamline all COPY/ENV/ARG/RUN lines in Dockerfile (less layers)
Make php-fpm listen on 9000 and not socket (rootless containers)
Make nginx/php/php-fpm run as www-data not root